@@ -6,20 +6,23 @@
     <ul id="portal-globalnav"
         tal:define="selected_tab python:view.selected_portal_tab"
         ><tal:tabs tal:repeat="tab portal_tabs"
-        ><li tal:define="tid tab/id;
+        ><li class="dropdown"
+             tal:define="tid tab/id;
                          subitems python:view.getTabObject(tabUrl = tab['url'], tabPath = tab.get('path'));
                          item_clickable python:view.enable_parent_clickable or not subitems"
              tal:attributes="id string:portaltab-${tid};
-                             class python:selected_tab==tid and 'selected' or 'plain'"
+                             class python:selected_tab==tid and 'dropdown selected' or 'dropdown plain';"
             ><a href=""
+                class="dropdown-toggle"
+                data-toggle="dropdown"
                tal:content="tab/name"
                tal:attributes="href tab/url;
                                title tab/description|nothing;
-                               class python:item_clickable and 'plain' or 'noClick'">
+                               class python:item_clickable and 'dropdown-toggle plain' or 'dropdown-toggle noClick'">
             Tab Name
             </a
             ><tal:block tal:condition="subitems">
-                <ul class="submenu">
+                <ul class="submenu dropdown-menu">
                     <tal:subitems tal:replace="structure subitems">
                         <tal:comment replace="nothing">Submenu</tal:comment>
                     </tal:subitems>
