@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+    <!-- Don't conflict with bootstrap's CSS -->
+    <stylesheet id="dropdown-menu.css"
+                enabled="0" />
+</object>
