@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<metadata>
+  <version>1</version>
+  <dependencies>
+    <dependency>profile-webcouturier.dropdownmenu:default</dependency>
+  </dependencies>
+</metadata>
